@@ -76,6 +76,7 @@ version <next>:
 - IVF muxer added
 - Wing Commander IV movies decoder added
 - movie source added
+- Bink version 'b' video decoder
 
 
 version 0.6:
